--- a/tests.html
+++ b/tests.html
@@ -11,6 +11,8 @@
   <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
   <script src="structures.js"></script>
   <script src="algorithms.js"></script>
+  <script src="binary_search.js"></script>
+  <script src="binary_search_test.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
